--- a/css/main.css
+++ b/css/main.css
@@ -1,10 +1,11 @@
 .wrapper {
   display: flex;
+  flex-direction: column;
 }
 
 .container-left {
   padding: 2em;
-  width: 55%;
+  width: 100%;
 
   display: flex;
   flex-direction: column;
@@ -13,7 +14,7 @@
 }
 
 .container-right {
-  width: 45%;
+  width: 100%;
   background-color: #4eb8b4;
 
   display: flex;
@@ -60,7 +61,7 @@ input, select, option {
   font-family:inherit;
   font-size: 1em;
 
-  width: 60%;
+  width: 100%;
   background-color: transparent;
 }
 
@@ -137,3 +138,24 @@ button:hover {
   margin: 2em 0;
 }
 
+/* desktop specific view styles */
+
+@media (orientation: landscape) {
+
+  .wrapper {
+    flex-direction: row;
+  }
+
+  .container-left {
+    width: 55%;
+  }
+
+  .container-right {
+    width: 45%;
+  }
+
+  input, select, option {
+    width: 60%;
+  }
+  
+}
