--- a/css/typography.css
+++ b/css/typography.css
@@ -14,7 +14,7 @@ body{
 }
 
 main h1{
-  font-size: 3em;
+  font-size: 2.2em;
 }
 
 main p{
@@ -35,7 +35,7 @@ button {
 }
 
 @media (orientation: landscape) {
-  h1 {
-    font-size: 2.5em;
+  main h1 {
+    font-size: 2.8em;
   }
 }  
