--- a/css/footer.css
+++ b/css/footer.css
@@ -3,9 +3,11 @@
 /******************/
 
 footer {
-  position: absolute;    
+  position: relative;    
   bottom: 0;
   width: 100%; 
+
+  overflow: hidden;
 }
 
 footer p {
@@ -13,13 +15,17 @@ footer p {
   margin: 0;
   padding: 1em 0;
 }
-
-
 /* Following is for "sticky" footer */
-.container-left {
-  /* Required for flex box to push footer to page bottom */
-  min-height: 100vh;
+
+/* Required for flex box to push footer to page bottom */
+.scrollable-content {
+  /* min-height: 100vh; */
   position: relative;
+}
+
+
+.container-left {
+  min-height: 100vh;
 }
 
 @media (orientation: landscape) {
