--- a/css/main.css
+++ b/css/main.css
@@ -3,6 +3,28 @@
   flex-direction: column;
 }
 
+.wrapper {
+  position: absolute;
+  width: 100%;
+
+  /* for scrolling of child (scrollable-content) */
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+}
+
+/* .section { */
+  /* margin: 2px; */
+  /* flex-grow: 1;
+
+  min-height: 0;
+
+  display: flex;
+  flex-direction: column;
+
+} */
+
 .container-left {
   padding: 2em;
   width: 100%;
@@ -21,7 +43,32 @@
   justify-content: center;
 }
 
-/* style the contents with container-left */
+/* styling to scroll the contents in left container */
+
+.scrollable-content {
+    flex-grow: 1;
+    
+    overflow-y: auto;
+    overflow-x: hidden;
+    
+    /* for Firefox */
+    min-height: 0;
+}
+
+/*** Hide ScrollBar but keeps the scroll functionality ***/
+
+/* Hide scrollbar for Chrome, Safari and Opera */
+.scrollable-content::-webkit-scrollbar {
+  display: none;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+.scrollable-content {
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;  /* Firefox */
+}
+
+/* style the contents within container-left */
 
 main {
   padding-top: 5em;
@@ -122,11 +169,13 @@ button:hover {
 }  
 
 
-/* style the contents with container-right */
+/* style the contents within container-right */
 .imageStyle {
   padding: 3em;
   margin: auto;
   width: 100%;
+
+  flex:auto;
 }
 
 .imageStyle img {
@@ -157,5 +206,9 @@ button:hover {
   input, select, option {
     width: 60%;
   }
+
+  /* .section {
+    flex-direction: row;
+  }  */
   
 }
