--- a/css/footer.css
+++ b/css/footer.css
@@ -8,12 +8,13 @@ footer {
   width: 100%; 
 
   overflow: hidden;
+  padding-top: 3em;
 }
 
 footer p {
   text-align: left;
   margin: 0;
-  padding: 1em 0;
+  padding-top: 1em;
 }
 /* Following is for "sticky" footer */
 
@@ -21,11 +22,6 @@ footer p {
 .scrollable-content {
   /* min-height: 100vh; */
   position: relative;
-}
-
-
-.container-left {
-  min-height: 100vh;
 }
 
 @media (orientation: landscape) {
