--- a/css/reset.css
+++ b/css/reset.css
@@ -15,7 +15,7 @@ ul {
 }
 /* removes defualt underline in <a> links */
 a {
-  color: #4d2003;
+  color: #00a19b;
   /* text-size-adjust: none; */
 } 
 
