--- a/css/main.css
+++ b/css/main.css
@@ -12,6 +12,7 @@
   top: 0;
   bottom: 0;
   left: 0;
+  right:0
 }
 
 /* .section { */
@@ -28,7 +29,7 @@
 .container-left {
   padding: 2em;
   width: 100%;
-
+  
   display: flex;
   flex-direction: column;
 
@@ -86,7 +87,7 @@ main h1 {
   margin: 0;
   padding-top: 1em;
 
-  color: #4eb8b4;
+  color: #444444;
 
 }
 
@@ -154,7 +155,7 @@ button {
   -webkit-appearance: none;
   text-align: center;
   color: white;
-  background-color: #4d2003;
+  background-color: #00a19b;
   /* box-shadow:0 0 15px 4px rgba(0,0,0,0.06); */
   border: none;
   border-radius: 5px;
@@ -165,7 +166,7 @@ button {
 } 
 
 button:hover {
-  background-color: #4d210380;
+  background-color: #00a19c8c;
 }  
 
 
@@ -179,7 +180,6 @@ button:hover {
 }
 
 .imageStyle img {
-  
   width: 100%;
 }
 
