--- a/css/typography.css
+++ b/css/typography.css
@@ -9,7 +9,7 @@ body{
   font-family: 'Inter', sans-serif;
     
   /* line-height (called leading in print design); browser default is usually 1.2. Try for a minimum of 1.5, max should be less than 2 */
-  line-height: 1.5;
+  line-height: 1.2;
   color: #222222;
 }
 
@@ -22,11 +22,12 @@ main p{
 }
 
 .tagline {
-  font-weight: bold;
+  /* font-weight: bold; */
 }
 
 .font-small {
   font-size: 0.8em;
+  
 } 
 
 button {
