--- a/css/footer.css
+++ b/css/footer.css
@@ -3,7 +3,7 @@
 /******************/
 
 footer {
-  position: relative;    
+  position: absolute;    
   bottom: 0;
   width: 100%; 
 
@@ -14,18 +14,32 @@ footer {
 footer p {
   text-align: left;
   margin: 0;
-  padding-top: 1em;
+  padding: 1em;
 }
-/* Following is for "sticky" footer */
 
-/* Required for flex box to push footer to page bottom */
-.scrollable-content {
-  /* min-height: 100vh; */
-  position: relative;
-}
 
 @media (orientation: landscape) {
-
+  footer {
+    position: relative;    
+    bottom: 0;
+    width: 100%; 
+  
+    overflow: hidden;
+    padding-top: 3em;
+  }
+  
+  footer p {
+    text-align: left;
+    margin: 0;
+    padding-top: 1em;
+  }
+  /* Following is for "sticky" footer */
+  
+  /* Required for flex box to push footer to page bottom */
+  .scrollable-content {
+    /* min-height: 100vh; */
+    position: relative;
+  }
 }
 
 
