--- a/css/main.css
+++ b/css/main.css
@@ -1,14 +1,11 @@
 .wrapper {
   display: flex;
   flex-direction: column;
+  flex: auto;
 }
 
 .wrapper {
-  position: absolute;
-  width: 100%;
-
-  /* for scrolling of child (scrollable-content) */
-  position: absolute;
+  position: relative;
   top: 0;
   bottom: 0;
   left: 0;
@@ -27,9 +24,11 @@
 } */
 
 .container-left {
-  padding: 2em;
   width: 100%;
-  
+  padding-left: 1em;
+
+  flex:auto;
+
   display: flex;
   flex-direction: column;
 
@@ -37,8 +36,11 @@
 }
 
 .container-right {
+
   width: 100%;
   background-color: #4eb8b4;
+
+  flex: auto;
 
   display: flex;
   justify-content: center;
@@ -49,7 +51,7 @@
 .scrollable-content {
     flex-grow: 1;
     
-    overflow-y: auto;
+    overflow-y: hidden;
     overflow-x: hidden;
     
     /* for Firefox */
@@ -113,7 +115,7 @@ input, select, option {
   font-family:inherit;
   font-size: 1em;
 
-  width: 100%;
+  width: 80%;
   background-color: transparent;
 }
 
@@ -200,6 +202,7 @@ button:hover {
   }
 
   .container-left {
+    padding: 2em;
     width: 55%;
   }
 
@@ -211,8 +214,40 @@ button:hover {
     width: 60%;
   }
 
-  /* .section {
-    flex-direction: row;
-  }  */
+  /* styling to scroll the contents in left container */
+
+  .scrollable-content {
+    flex-grow: 1;
+    
+    overflow-y: auto;
+    overflow-x: hidden;
+    
+    /* for Firefox */
+    min-height: 0;
+  }
+
+  /*** Hide ScrollBar but keeps the scroll functionality ***/
+
+  /* Hide scrollbar for Chrome, Safari and Opera */
+  .scrollable-content::-webkit-scrollbar {
+  display: none;
+  }
+
+  /* Hide scrollbar for IE, Edge and Firefox */
+  .scrollable-content {
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;  /* Firefox */
+  }
+
+  .wrapper {
+    width: 100%;
   
+    /* for scrolling of child (scrollable-content) */
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right:0
+  }
+
 }
