placeholder color changed

--- a/css/main.css
+++ b/css/main.css
@@ -9,7 +9,7 @@
   top: 0;
   bottom: 0;
   left: 0;
-  right:0
+  right:0;
 }
 
 /* .section { */
@@ -125,26 +125,26 @@ input:focus, select:focus{
 }
 
 .selectEx {
-  color: #d2d2d2;
+  color:  #c3c3c3;
 }
 
-option:not(first-child) {color:#d2d2d2}
+option:not(first-child) {color: #c3c3c3}
 
 textarea {
   resize: vertical;
 }
 
 ::-webkit-input-placeholder { /* Chrome/Opera/Safari */
-  color: #d2d2d2;
+  color: #c3c3c3;
 }
 ::-moz-placeholder { /* Firefox 19+ */
-  color: #d2d2d2;
+  color:  #c3c3c3;
 }
 :-ms-input-placeholder { /* IE 10+ */
-  color: #d2d2d2;
+  color:  #c3c3c3;
 }
 :-moz-placeholder { /* Firefox 18- */
-  color: #d2d2d2;
+  color: #c3c3c3;
 }
 
 select {
@@ -203,7 +203,9 @@ button:hover {
   }
 
   .container-left {
-    padding: 2em;
+    padding-left: 2em;
+    padding-right: 2em;
+    padding-bottom: 0;
     width: 55%;
   }
 
